<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity"
    android:background="@drawable/gradient_background" >

    <com.github.hintofbasil.standingalone.map.LocationsMap
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/map_legend" />

    <LinearLayout
        android:id="@+id/map_legend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/progress_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true" >

                <ImageView
                    android:id="@+id/story_progress_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/point_unselected" />

                <ImageView
                    android:id="@+id/story_progress_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/point_unselected" />


                <ImageView
                    android:id="@+id/story_progress_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/point_unselected" />


                <ImageView
                    android:id="@+id/story_progress_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/point_unselected" />


                <ImageView
                    android:id="@+id/story_progress_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/point_unselected" />


                <ImageView
                    android:id="@+id/story_progress_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/point_unselected" />


                <ImageView
                    android:id="@+id/story_progress_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/point_unselected" />


                <ImageView
                    android:id="@+id/story_progress_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/point_unselected" />


                <ImageView
                    android:id="@+id/story_progress_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/point_unselected" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/9"
                android:layout_toRightOf="@id/progress_container"
                android:layout_toEndOf="@id/progress_container" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_description"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/map_legend_margin_top"
            android:layout_marginBottom="@dimen/map_legend_margin_bottom" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/map_legend_vertical_inner_margin" >

                <ImageView
                    android:layout_width="@dimen/map_legend_icon_size"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/next_location_marker"
                    android:layout_marginRight="@dimen/map_legend_horizontal_inner_margin"
                    android:layout_marginEnd="@dimen/map_legend_horizontal_inner_margin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_legend_next"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="@dimen/map_legend_icon_size"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/previous_location_marker"
                    android:layout_marginRight="@dimen/map_legend_horizontal_inner_margin"
                    android:layout_marginEnd="@dimen/map_legend_horizontal_inner_margin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_legend_previous"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
